galen-core/src/test/resources/negative-specs/invalid-object-locator.spec
# negative spec


=================
normal-object xpath //div

bad-object 

=====================